Added JAVASCRIPT Code and Demo Assets

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <!-- <div class="heading">Calculator using html css and js</div> -->
             <div class="stopwatch">
                 <div class="stopwatch-heading">
-
+                    <p style="text-align: center;">
+                        <img src="assets/favicon.png" width="40">
+                    </p>
                     <p id="heading">
                         Stopwatch
                     </p>
@@ -77,11 +79,6 @@
         </div>
     </div>
     </div>
-
-
-
-
-
 
     <script src="script.js"></script>
 </body>
